--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="save">Salvar</string>
     <string name="search">Buscar</string>
     <string name="ok">Ok</string>
+    <string name="birth_date">Data de nascimento</string>
 </resources>
