--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="search">Buscar</string>
     <string name="ok">Ok</string>
     <string name="birth_date">Data de nascimento</string>
+    <string name="send_scores">Enviar notas</string>
 </resources>
