--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="ok">Ok</string>
     <string name="birth_date">Data de nascimento</string>
     <string name="send_scores">Enviar notas</string>
+    <string name="select_image">Selecione a imagem</string>
+    <string name="receive_exams">Baixar provas</string>
 </resources>
