--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,9 @@
     <string name="send_scores">Enviar notas</string>
     <string name="select_image">Selecione a imagem</string>
     <string name="receive_exams">Baixar provas</string>
+    <string name="see_in_map">Ver no mapa</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
